[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://resources/fonts/actual/base/font_smallest_text.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/fonts/actual/base/font_subtitle.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/menus/shop/synergy_panel.gd" type="Script" id=4]

[node name="SynergyPanel" type="PanelContainer"]
margin_right = 14.0
margin_bottom = 14.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 207.0
margin_bottom = 89.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 187.0
margin_bottom = 69.0

[node name="SynergyName" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 172.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.917647, 0.886275, 0.690196, 1 )
custom_fonts/font = ExtResource( 3 )
text = "SYNERGY_NAME"

[node name="SynergyEffects" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 172.0
margin_bottom = 54.0
custom_fonts/normal_font = ExtResource( 2 )
bbcode_enabled = true
bbcode_text = "dsdsfdsfdsf"
text = "dsdsfdsfdsf"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}
